# flussbuero-erfurt-de

./: README.md  pyproject.toml
src/flussbuero_erfurt_de/: __init__.py  __main__.py  server.py  settings.py
src/flussbuero_erfurt_de/templates/: base.html.jinja2  layout.html.jinja2
src/flussbuero_erfurt_de/templates/components/: header.html.jinja2
src/flussbuero_erfurt_de/templates/layouts/: normal.html.jinja2
src/flussbuero_erfurt_de/templates/modules/errors/: 404.html.jinja2  500.html.jinja2  maintenance.jinja2
src/flussbuero_erfurt_de/templates/modules/pages/: home.html.jinja2
src/flussbuero_erfurt_de/templates/pages/: home.html.jinja2
