[project]
name = "flussbuero-erfurt-de"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Julius Koenig", email = "julius@koenig-site.de"},
]
dependencies = [
    "uvicorn>=0.30.5",
    "starlette>=0.38.2",
    "jinja2>=3.1.4",
    "wiederverwendbar>=0.3.2",
    "rich>=13.7.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
